chore: ajustando configuração

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -19,6 +19,8 @@ baseFontSize = 14
 headingFont = "Space Grotesk"
 headingFontWeights = [300, 400, 400, 300, 300, 300]
 headingFontSizes = ["2.5rem", "2rem", "1.5rem"]
+[client]
+showSidebarNavigation = false
 [server]
 runOnSave = true
 [ui]
